[fix] Align instagram images center

--- a/content/themes/peterwilsoncc-v01/assets/css/inline.css
+++ b/content/themes/peterwilsoncc-v01/assets/css/inline.css
@@ -1282,7 +1282,7 @@ Breaks the naming convention to fit with WordPress's default classes
     .alignright {
       margin-right: -5rem; } }
 
-.instagram-link,
+.instagram-link > .keyring-img,
 .wp-post-image,
 figure.alignnone,
 img.alignnone,
