--- a/content/themes/peterwilsoncc-v01/assets/css/scss/_shame.scss
+++ b/content/themes/peterwilsoncc-v01/assets/css/scss/_shame.scss
@@ -74,7 +74,7 @@
 	}
 }
 
-.instagram-link,
+.instagram-link > .keyring-img,
 .wp-post-image,
 figure.alignnone,
 img.alignnone,
